Right align dropdown navigation to prevent overflow on right

--- a/assets/css/site/contexts/_navigation.scss
+++ b/assets/css/site/contexts/_navigation.scss
@@ -282,7 +282,7 @@
             position: absolute;
             top: 100%;
             margin-top: -1px;
-            left: 0;
+            right: 0;
             background-color: white;
             padding: $contentPadding / 2 $contentPadding;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
